@@ -10,10 +10,13 @@ __copyright__ = "Copyright (C) 2013-2017  Martin Blais"
 __license__ = "GNU GPLv2"
 
 import collections
+import copy
+from typing import Optional, Set
 
 from beancount.core.number import ONE
 from beancount.core.number import ZERO
 from beancount.core.data import Price
+from beancount.core.data import Currency
 from beancount.core import data
 from beancount.utils import misc_utils
 from beancount.utils import bisect_key
@@ -130,6 +133,109 @@ def build_price_map(entries):
 
     sorted_price_map.forward_pairs = forward_pairs
     return sorted_price_map
+
+
+def project(orig_price_map: PriceMap,
+            from_currency: Currency,
+            to_currency: Currency,
+            base_currencies: Optional[Set[Currency]] = None) -> PriceMap:
+    """Project all prices with a quote currency to another quote currency.
+
+    Say you have a price for HOOL in USD and you'd like to convert HOOL to CAD.
+    If there aren't any (HOOL, CAD) price pairs in the database it will remain
+    unconverted. Projecting from USD to CAD will compute combined rates and
+    insert corresponding prices over all base currencies (like HOOL). In this
+    example, each of the (HOOL, USD) prices would see an inserted (HOOL, CAD)
+    price inserted at the same date.
+
+    It is common to make these projections when reducing inventories in a ledger
+    that states multiple operating currency pairs, when for example, one wants
+    to compute total value of a set of accounts in one of those currencies.
+
+    Please note that:
+
+    - Even if the target pair has existing entries, projection will still be
+      applied. For example, is there exist some (HOOL, CAD) prices, the
+      projection in the example above will still insert some new price points to
+      it.
+
+    - However, projected prices colliding existing ones at the same date will
+      not override them.
+
+    - Projection will fail to insert a new price if the conversion between to
+      and from currencies has no existing prices (e.g. before its first price
+      entry).
+
+    - Perhaps most importantly, we only insert price points at dates where the
+      base commodity has a price point. In other words, if we have prices for
+      dates A and C and the rate changes between these dates at date B, we don't
+      synthesize a new price at date B. A more accurate method to get projected
+      prices that takes into account varying rates is to do multiple lookups.
+      We'll eventually add a method to query it via a specified list of
+      intermediate pairs. {c1bd24f8d4b7}
+
+    Args:
+      orig_price_map: An existing price map.
+      from_currency: The quote currency with existing project points (e.g., USD).
+      to_currency: The quote currency to insert price points for (e.g., CAD).
+      base_currencies: An optional set of commodities to restrict the
+        projections to (e.g., {HOOL}).
+    Returns:
+      A new price map, with the extra projected prices. The original price map
+      is kept intact.
+    """
+    # If nothing is requested, return the original map.
+    if from_currency == to_currency:
+        return orig_price_map
+
+    # Avoid mutating the input map.
+    price_map = {key: list(value) for key, value in orig_price_map.items()}
+
+    # Process the entire database (it's not indexed by quote currency).
+    currency_pair = (from_currency, to_currency)
+    for base_quote, prices in list(price_map.items()):
+        # Filter just the currencies to convert.
+        base, quote = base_quote
+        if quote != from_currency:
+            continue
+
+        # Skip currencies not requested if a constraint has been provided.
+        # {4bb702d82c8a}
+        if base_currencies and base not in base_currencies:
+            continue
+
+        # Create a mapping of existing prices so we can avoid date collisions.
+        existing_prices = ({date for date, _ in price_map[(base, to_currency)]}
+                           if (base, to_currency) in price_map
+                           else set())
+
+        # Project over each of the prices.
+        new_projected = []
+        for date, price in prices:
+            rate_date, rate = get_price(price_map, currency_pair, date)
+            if rate is None:
+                # There is no conversion rate at this time; skip projection.
+                # {b2b23353275d}.
+                continue
+            if rate_date in existing_prices:
+                # Skip collisions in date. {97a5703ac517}
+                continue
+
+            # Append the new rate.
+            new_price = price * rate
+            new_projected.append((date, new_price))
+
+        # Make sure the resulting lists are sorted.
+        if new_projected:
+            projected = price_map.setdefault((base, to_currency), [])
+            projected.extend(new_projected)
+            projected.sort()
+
+            inverted = price_map.setdefault((to_currency, base), [])
+            inverted.extend((date, ZERO if rate == ZERO else ONE/rate) for date, rate in new_projected)
+            inverted.sort()
+
+    return price_map
 
 
 def normalize_base_quote(base_quote):
